# protogen/go/api/v1/cat_service_grpc.pb.go
@@ -23,6 +23,8 @@ const _ = grpc.SupportPackageIsVersion7
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type CatServiceClient interface {
 	GetFact(ctx context.Context, in *GetFactRequest, opts ...grpc.CallOption) (*GetFactResponse, error)
+	CreateCat(ctx context.Context, in *CreateCatRequest, opts ...grpc.CallOption) (*CreateCatResponse, error)
+	ListCats(ctx context.Context, in *ListCatsRequest, opts ...grpc.CallOption) (*ListCatsResponse, error)
 }
 
 type catServiceClient struct {
@@ -42,11 +44,31 @@ func (c *catServiceClient) GetFact(ctx context.Context, in *GetFactRequest, opts
 	return out, nil
 }
 
+func (c *catServiceClient) CreateCat(ctx context.Context, in *CreateCatRequest, opts ...grpc.CallOption) (*CreateCatResponse, error) {
+	out := new(CreateCatResponse)
+	err := c.cc.Invoke(ctx, "/api.v1.CatService/CreateCat", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *catServiceClient) ListCats(ctx context.Context, in *ListCatsRequest, opts ...grpc.CallOption) (*ListCatsResponse, error) {
+	out := new(ListCatsResponse)
+	err := c.cc.Invoke(ctx, "/api.v1.CatService/ListCats", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // CatServiceServer is the server API for CatService service.
 // All implementations should embed UnimplementedCatServiceServer
 // for forward compatibility
 type CatServiceServer interface {
 	GetFact(context.Context, *GetFactRequest) (*GetFactResponse, error)
+	CreateCat(context.Context, *CreateCatRequest) (*CreateCatResponse, error)
+	ListCats(context.Context, *ListCatsRequest) (*ListCatsResponse, error)
 }
 
 // UnimplementedCatServiceServer should be embedded to have forward compatible implementations.
@@ -55,6 +77,12 @@ type UnimplementedCatServiceServer struct {
 
 func (UnimplementedCatServiceServer) GetFact(context.Context, *GetFactRequest) (*GetFactResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetFact not implemented")
+}
+func (UnimplementedCatServiceServer) CreateCat(context.Context, *CreateCatRequest) (*CreateCatResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateCat not implemented")
+}
+func (UnimplementedCatServiceServer) ListCats(context.Context, *ListCatsRequest) (*ListCatsResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListCats not implemented")
 }
 
 // UnsafeCatServiceServer may be embedded to opt out of forward compatibility for this service.
@@ -86,6 +114,42 @@ func _CatService_GetFact_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
+func _CatService_CreateCat_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateCatRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CatServiceServer).CreateCat(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.v1.CatService/CreateCat",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CatServiceServer).CreateCat(ctx, req.(*CreateCatRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _CatService_ListCats_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListCatsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CatServiceServer).ListCats(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.v1.CatService/ListCats",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CatServiceServer).ListCats(ctx, req.(*ListCatsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // CatService_ServiceDesc is the grpc.ServiceDesc for CatService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -96,6 +160,14 @@ var CatService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetFact",
 			Handler:    _CatService_GetFact_Handler,
+		},
+		{
+			MethodName: "CreateCat",
+			Handler:    _CatService_CreateCat_Handler,
+		},
+		{
+			MethodName: "ListCats",
+			Handler:    _CatService_ListCats_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
